fix: change page alignment

--- a/src/main/resources/styles/document.css
+++ b/src/main/resources/styles/document.css
@@ -1,6 +1,8 @@
-.root {
-
+ScrollPane {
+    -fx-padding: 0 20px;
+    -fx-pref-width: 660px;
 }
+
 .document {
     -fx-spacing: 20px;
 }
